PPRO-mise en page du background et du tittre

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,25 @@
   </head>
   <body>
     <header>
-
-<div class="container">
-  <div class="row">
-    <div class="col"></div>
-    <div class="col"></div>
+      <div class="container">
+        <div class="row"></div>
+        <div class="col-3">
+          <img src="img/bouteilles/logo_BLANC.png" alt="Logo de la marque" />
+        </div>
+        <div class="row">
+          <div class="container">
+            <div class="col-9"></div>
+          </div>
+          <div class="nav">
+            <select name="langage-button" id="nav">
+              <option value="nav">FR</option>
+              <option value="nav">DE</option>
+              <option value="nav">EN</option>
+            </select>
+          </div>
+        </div>
+      </div>
     </header>
-
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
