PPRO-Ajustement du background et ajout de la nav

--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,31 @@
   <body>
     <header>
       <div class="container">
-        <div class="row"></div>
-        <div class="col-3">
-          <img src="img/bouteilles/logo_BLANC.png" alt="Logo de la marque" />
+        <div class="row">
+          <div class="col-4">
+            <img
+              class="title"
+              src="img/bouteilles/logo_BLANC.png"
+              alt="Logo de la marque"
+            />
+          </div>
         </div>
         <div class="row">
           <div class="container">
-            <div class="col-9"></div>
-          </div>
-          <div class="nav">
-            <select name="langage-button" id="nav">
-              <option value="nav">FR</option>
-              <option value="nav">DE</option>
-              <option value="nav">EN</option>
-            </select>
+            <div class="col-8">
+              <div class="nav">
+                <nav>
+                  <select name="langage-button" id="nav">
+                    <option value="nav">FR</option>
+                    <option value="nav">DE</option>
+                    <option value="nav">EN</option>
+                  </select>
+                  <p>Newsletter</p>
+                  <p>Connexion</p>
+                  <p>Panier</p>
+                </nav>
+              </div>
+            </div>
           </div>
         </div>
       </div>
