PPRO-instalation des petits personnage nav

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-4">
+          <div class="col-">
             <img
               class="title"
               src="img/bouteilles/logo_BLANC.png"
@@ -18,7 +18,7 @@
             />
           </div>
         </div>
-        <div class="row">
+
           <div class="container">
             <div class="col-8">
               <div class="nav">
@@ -32,6 +32,23 @@
                   <p>Connexion</p>
                   <p>Panier</p>
                 </nav>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <div class="logos">
+              <div class="mini-logo-mermaid">
+                <img src="img/personnages/sirene-jaune.png" alt="" />
+              </div>
+              <div class="mini-logo-pirate">
+                <img src="img/personnages/pirate-rouge.png" alt="" />
+              </div>
+              <div class="mini-logo-kraken">
+                <img src="img/personnages/kraken-violet.png" alt="" />
               </div>
             </div>
           </div>
