PPRO-mise en page du texte de leur histoire

--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,15 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-">
-            <img
-              class="title"
-              src="img/bouteilles/logo_BLANC.png"
-              alt="Logo de la marque"
-            />
+          <div class="col-4">
+            <h1>
+              <img
+                class="title"
+                src="img/bouteilles/logo_BLANC.png"
+                alt="Logo de la marque"
+              />
+            </h1>
           </div>
-        </div>
-
           <div class="container">
             <div class="col-8">
               <div class="nav">
@@ -50,6 +50,50 @@
               <div class="mini-logo-kraken">
                 <img src="img/personnages/kraken-violet.png" alt="" />
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-8">
+            <div class="other-nav">
+              <nav>
+                <p>Nos Bières</p>
+                <p>Notre Histoire</p>
+                <p>Shop</p>
+                <p>Point de Vente</p>
+                <p>Contact</p>
+              </nav>
+            </div>
+          </div>
+          <div class="col-2">
+            <div class="alcool">
+              <p>0% d'acool</p>
+            </div>
+          </div>
+          <div class="col-10">
+            <div class="history-title">
+              <h2>“Le trésor des mers, sans l'ivresse des vagues !”</h2>
+            </div>
+            <div class="history">
+              <p>
+                Sylvain est un entrepreneur passionné basé à Estavayer-le-Lac,
+                dirigeant une brasserie spécialisée dans la production de bières
+                sans alcool. Ses bières sont biologiques, artisanales, et
+                renommées pour leur qualité exceptionnelle et leur authenticité
+                <br /><br />
+                Motivé par des raisons de santé, d'éthique, et d'égalité, ainsi
+                que par ses convictions personnelles, Sylvain a choisi de se
+                consacrer à la création de bières sans alcool. <br />
+                <br />
+                Son objectif est de conserver un équilibre entre tradition et
+                modernité, afin de séduire une clientèle jeune tout en
+                respectant les méthodes artisanales. Grâce à son approche
+                innovante et son respect des traditions, Sylvain réussit à
+                offrir des bières qui plaisent autant pour leur goût que pour
+                leurs valeurs.
+              </p>
             </div>
           </div>
         </div>
