PPRO-texte histoire et commencement de la bière blonde

--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,36 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="beers-blonde">
+              <div class="blonde">
+                <h3>La Blonde</h3>
+                <p class="beers-information">
+                  en verre de 33 cl <br />
+                  Dans les abysses, seules les sirènes à deux têtes savourent
+                  les bières blondes, unissant leur essence unique autour de
+                  cette boisson pétillante, symbole de leur camaraderie
+                  sous-marine.”
+                </p>
+                <h4>Ingrédients</h4>
+                <p>
+                  Eau, malt torréfié d’orge, malt torifié de blé, houblon.
+                  Allergène: Gluten 0%
+                </p>
+                <img
+                  class="beers-bottle"
+                  src="img/autre-siteweb/bouteille-Blonde 1.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
