PPRO-classement des scss celon leur cathegorie et developpement de la partie bière blonde

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <title>eikon parcel starter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goblin+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -107,22 +113,29 @@
               <div class="blonde">
                 <h3>La Blonde</h3>
                 <p class="beers-information">
-                  en verre de 33 cl <br />
-                  Dans les abysses, seules les sirènes à deux têtes savourent
-                  les bières blondes, unissant leur essence unique autour de
-                  cette boisson pétillante, symbole de leur camaraderie
-                  sous-marine.”
+                  en verre de <strong>33 cl </strong> <br />
+                  Dans les abysses, seules les sirènes à deux têtes
+                  <br />savourent les bières blondes, unissant leur essence
+                  <br />
+                  unique autour de cette boisson pétillante, symbole <br />
+                  de leur camaraderie sous-marine.”
                 </p>
-                <h4>Ingrédients</h4>
-                <p>
-                  Eau, malt torréfié d’orge, malt torifié de blé, houblon.
-                  Allergène: Gluten 0%
+                <p class="beers-ingredients">
+                  Ingrédients <br />
+                  Eau, malt d’orge, colorant : E150c, arôme naturel, <br />
+                  houblon. <br />
+                  Allergènes: Gluten 0%
                 </p>
                 <img
                   class="beers-bottle"
                   src="img/autre-siteweb/bouteille-Blonde 1.png"
                   alt=""
                 />
+                <div class="beers-price">
+                  <button id="btn decrement">-</button>
+                  <span id="number">0</span>
+                  <button id="btn decrement">+</button>
+                </div>
               </div>
             </div>
           </div>
