--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Goblin+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -121,7 +127,7 @@
                   de leur camaraderie sous-marine.”
                 </p>
                 <p class="beers-ingredients">
-                  Ingrédients <br />
+                  <strong>Ingrédients</strong> <br />
                   Eau, malt d’orge, colorant : E150c, arôme naturel, <br />
                   houblon. <br />
                   Allergènes: Gluten 0%
@@ -136,6 +142,68 @@
                   <span id="number">0</span>
                   <button id="btn decrement">+</button>
                 </div>
+                <button class="button">Ajouter au Panier</button>
+              </div>
+            </div>
+
+            <div class="beers-brown">
+              <div class="brown">
+                <h3 class="brown-title">La Brune</h3>
+                <p class="beers-information">
+                  “Dans les récits marins, seuls les pirates squelettes <br />
+                  s'accordent le privilège des bières rousses. Réunis dans
+                  <br />
+                  les profondeurs mystérieuses, ces spectres de la mer <br />
+                  partagent cette boisson ambrée, célébrant leur immortalité
+                  <br />et leur lien éternel avec l'océan.”
+                </p>
+                <p class="beers-ingredients">
+                  <strong>Ingrédients</strong> <br />
+                  Eau, malt torréfié d’orge, malt torifié de blé, <br />
+                  houblon. <br />
+                  Allergène: Gluten 0%
+                </p>
+                <img
+                  class="beers-bottle"
+                  src="img/bouteilles/bouteille-rousse.png"
+                  alt=""
+                />
+                <div class="beers-price">
+                  <button id="btn decrement">-</button>
+                  <span id="number">0</span>
+                  <button id="btn decrement">+</button>
+                </div>
+                <button class="button">Ajouter au Panier</button>
+              </div>
+            </div>
+
+            <div class="beers-ipa">
+              <div class="ipa">
+                <h3 class="ipa-title">La IPA</h3>
+                <p class="beers-information-ipa">
+                  “Dans les récits marins, seule la légendaire créature du
+                  <br />
+                  Kraken peut se délecter d'une bière IPA. Au cœur des <br />
+                  abysses, ce monstre des profondeurs savoure cette <br />
+                  boisson amère, symbole de sa suprématie sur les océans.”
+                </p>
+                <p class="beers-ingredients-ipa">
+                  <strong>Ingrédients</strong> <br />
+                  Eau, malt torréfié d’orge, malt torifié de blé, <br />
+                  houblon. <br />
+                  Allergène: Gluten 0%
+                </p>
+                <img
+                  class="beers-bottle"
+                  src="img/bouteilles/bouteille-IPA.png"
+                  alt=""
+                />
+                <div class="beers-price">
+                  <button id="btn decrement">-</button>
+                  <span id="number">0</span>
+                  <button id="btn decrement">+</button>
+                </div>
+                <button class="button">Ajouter au Panier</button>
               </div>
             </div>
           </div>
