PPRO- modification des bière et ajout de la newsletter

--- a/src/index.html
+++ b/src/index.html
@@ -54,13 +54,24 @@
           <div class="col-6">
             <div class="logos">
               <div class="mini-logo-mermaid">
-                <img src="img/personnages/sirene-jaune.png" alt="" />
+                <a href="#blonde-title">
+                  <img
+                    src="img/personnages/sirene-jaune.png"
+                    alt="mini image de la sirene à deux têtes"
+                  />
+                </a>
               </div>
               <div class="mini-logo-pirate">
-                <img src="img/personnages/pirate-rouge.png" alt="" />
+                <img
+                  src="img/personnages/pirate-rouge.png"
+                  alt="mini image du pirate skelette"
+                />
               </div>
               <div class="mini-logo-kraken">
-                <img src="img/personnages/kraken-violet.png" alt="" />
+                <img
+                  src="img/personnages/kraken-violet.png"
+                  alt="mini image du kraken"
+                />
               </div>
             </div>
           </div>
@@ -117,7 +128,7 @@
           <div class="col">
             <div class="beers-blonde">
               <div class="blonde">
-                <h3>La Blonde</h3>
+                <h3 class="blonde-title">Blonde</h3>
                 <p class="beers-information">
                   en verre de <strong>33 cl </strong> <br />
                   Dans les abysses, seules les sirènes à deux têtes
@@ -206,6 +217,12 @@
                 <button class="button">Ajouter au Panier</button>
               </div>
             </div>
+          </div>
+          <div class="col-4">
+            <h3 class="newletter-title">Newsletter</h3>
+          </div>
+          <div class="col-10">
+            <div class="newsletter"></div>
           </div>
         </div>
       </div>
