--- a/src/index.html
+++ b/src/index.html
@@ -222,7 +222,16 @@
             <h3 class="newletter-title">Newsletter</h3>
           </div>
           <div class="col-10">
-            <div class="newsletter"></div>
+            <div class="newsletter">
+              <input
+                type="text"
+                id="newsletter-firstname"
+                placeholder="Prénom"
+              />
+              <input type="text" id="newsletter-name" placeholder="Nom" />
+              <input type="text" id="newsletter-email" placeholder="E-mail" />
+              <button class="button">Ajouter au Panier</button>
+            </div>
           </div>
         </div>
       </div>
