PPRO-animation de l'oppacitée des bouteilles, petit souci avec le scss ne marche plus

--- a/src/index.html
+++ b/src/index.html
@@ -129,29 +129,31 @@
             <div class="beers-blonde">
               <div class="blonde">
                 <h3 class="blonde-title">Blonde</h3>
-                <p class="beers-information">
-                  en verre de <strong>33 cl </strong> <br />
-                  Dans les abysses, seules les sirènes à deux têtes
-                  <br />savourent les bières blondes, unissant leur essence
-                  <br />
-                  unique autour de cette boisson pétillante, symbole <br />
-                  de leur camaraderie sous-marine.”
-                </p>
-                <p class="beers-ingredients">
-                  <strong>Ingrédients</strong> <br />
-                  Eau, malt d’orge, colorant : E150c, arôme naturel, <br />
-                  houblon. <br />
-                  Allergènes: Gluten 0%
-                </p>
-                <img
-                  class="beers-bottle"
-                  src="img/autre-siteweb/bouteille-Blonde 1.png"
-                  alt=""
-                />
-                <div class="beers-price">
-                  <button id="btn decrement">-</button>
-                  <span id="number">0</span>
-                  <button id="btn decrement">+</button>
+                <div class="text-invisible">
+                  <p class="beers-information">
+                    en verre de <strong>33 cl </strong> <br />
+                    Dans les abysses, seules les sirènes à deux têtes
+                    <br />savourent les bières blondes, unissant leur essence
+                    <br />
+                    unique autour de cette boisson pétillante, symbole <br />
+                    de leur camaraderie sous-marine.”
+                  </p>
+                  <p class="beers-ingredients">
+                    <strong>Ingrédients</strong> <br />
+                    Eau, malt d’orge, colorant : E150c, arôme naturel, <br />
+                    houblon. <br />
+                    Allergènes: Gluten 0%
+                  </p>
+                  <img
+                    class="beers-bottle"
+                    src="img/autre-siteweb/bouteille-Blonde 1.png"
+                    alt=""
+                  />
+                  <div class="beers-price">
+                    <button id="btn decrement">-</button>
+                    <span id="number">0</span>
+                    <button id="btn decrement">+</button>
+                  </div>
                 </div>
                 <button class="button">Ajouter au Panier</button>
               </div>
@@ -160,61 +162,65 @@
             <div class="beers-brown">
               <div class="brown">
                 <h3 class="brown-title">La Brune</h3>
-                <p class="beers-information">
-                  “Dans les récits marins, seuls les pirates squelettes <br />
-                  s'accordent le privilège des bières rousses. Réunis dans
-                  <br />
-                  les profondeurs mystérieuses, ces spectres de la mer <br />
-                  partagent cette boisson ambrée, célébrant leur immortalité
-                  <br />et leur lien éternel avec l'océan.”
-                </p>
-                <p class="beers-ingredients">
-                  <strong>Ingrédients</strong> <br />
-                  Eau, malt torréfié d’orge, malt torifié de blé, <br />
-                  houblon. <br />
-                  Allergène: Gluten 0%
-                </p>
-                <img
-                  class="beers-bottle"
-                  src="img/bouteilles/bouteille-rousse.png"
-                  alt=""
-                />
-                <div class="beers-price">
-                  <button id="btn decrement">-</button>
-                  <span id="number">0</span>
-                  <button id="btn decrement">+</button>
+                <div class="text-invisible">
+                  <p class="beers-information">
+                    “Dans les récits marins, seuls les pirates squelettes <br />
+                    s'accordent le privilège des bières rousses. Réunis dans
+                    <br />
+                    les profondeurs mystérieuses, ces spectres de la mer <br />
+                    partagent cette boisson ambrée, célébrant leur immortalité
+                    <br />et leur lien éternel avec l'océan.”
+                  </p>
+                  <p class="beers-ingredients">
+                    <strong>Ingrédients</strong> <br />
+                    Eau, malt torréfié d’orge, malt torifié de blé, <br />
+                    houblon. <br />
+                    Allergène: Gluten 0%
+                  </p>
+                  <img
+                    class="beers-bottle"
+                    src="img/bouteilles/bouteille-rousse.png"
+                    alt=""
+                  />
+                  <div class="beers-price">
+                    <button id="btn decrement">-</button>
+                    <span id="number">0</span>
+                    <button id="btn decrement">+</button>
+                  </div>
+                  <button class="button">Ajouter au Panier</button>
                 </div>
-                <button class="button">Ajouter au Panier</button>
               </div>
             </div>
 
             <div class="beers-ipa">
               <div class="ipa">
                 <h3 class="ipa-title">La IPA</h3>
-                <p class="beers-information-ipa">
-                  “Dans les récits marins, seule la légendaire créature du
-                  <br />
-                  Kraken peut se délecter d'une bière IPA. Au cœur des <br />
-                  abysses, ce monstre des profondeurs savoure cette <br />
-                  boisson amère, symbole de sa suprématie sur les océans.”
-                </p>
-                <p class="beers-ingredients-ipa">
-                  <strong>Ingrédients</strong> <br />
-                  Eau, malt torréfié d’orge, malt torifié de blé, <br />
-                  houblon. <br />
-                  Allergène: Gluten 0%
-                </p>
-                <img
-                  class="beers-bottle"
-                  src="img/bouteilles/bouteille-IPA.png"
-                  alt=""
-                />
-                <div class="beers-price">
-                  <button id="btn decrement">-</button>
-                  <span id="number">0</span>
-                  <button id="btn decrement">+</button>
+                <div class="text-invisible">
+                  <p class="beers-information-ipa">
+                    “Dans les récits marins, seule la légendaire créature du
+                    <br />
+                    Kraken peut se délecter d'une bière IPA. Au cœur des <br />
+                    abysses, ce monstre des profondeurs savoure cette <br />
+                    boisson amère, symbole de sa suprématie sur les océans.”
+                  </p>
+                  <p class="beers-ingredients-ipa">
+                    <strong>Ingrédients</strong> <br />
+                    Eau, malt torréfié d’orge, malt torifié de blé, <br />
+                    houblon. <br />
+                    Allergène: Gluten 0%
+                  </p>
+                  <img
+                    class="beers-bottle"
+                    src="img/bouteilles/bouteille-IPA.png"
+                    alt=""
+                  />
+                  <div class="beers-price">
+                    <button id="btn decrement">-</button>
+                    <span id="number">0</span>
+                    <button id="btn decrement">+</button>
+                  </div>
+                  <button class="button">Ajouter au Panier</button>
                 </div>
-                <button class="button">Ajouter au Panier</button>
               </div>
             </div>
           </div>
