PPRO-scss re fonctionne, ajustement de la transition appacity sur les bouteilles et les infos

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
           <div class="col-6">
             <div class="logos">
               <div class="mini-logo-mermaid">
-                <a href="#blonde-title">
+                <a href="blonde-title">
                   <img
                     src="img/personnages/sirene-jaune.png"
                     alt="mini image de la sirene à deux têtes"
@@ -149,11 +149,11 @@
                     src="img/autre-siteweb/bouteille-Blonde 1.png"
                     alt=""
                   />
-                  <div class="beers-price">
-                    <button id="btn decrement">-</button>
-                    <span id="number">0</span>
-                    <button id="btn decrement">+</button>
-                  </div>
+                </div>
+                <div class="beers-price">
+                  <button id="btn decrement">-</button>
+                  <span id="number">0</span>
+                  <button id="btn decrement">+</button>
                 </div>
                 <button class="button">Ajouter au Panier</button>
               </div>
@@ -182,13 +182,13 @@
                     src="img/bouteilles/bouteille-rousse.png"
                     alt=""
                   />
-                  <div class="beers-price">
-                    <button id="btn decrement">-</button>
-                    <span id="number">0</span>
-                    <button id="btn decrement">+</button>
-                  </div>
-                  <button class="button">Ajouter au Panier</button>
                 </div>
+                <div class="beers-price">
+                  <button id="btn decrement">-</button>
+                  <span id="number">0</span>
+                  <button id="btn decrement">+</button>
+                </div>
+                <button class="button">Ajouter au Panier</button>
               </div>
             </div>
 
@@ -214,13 +214,13 @@
                     src="img/bouteilles/bouteille-IPA.png"
                     alt=""
                   />
-                  <div class="beers-price">
-                    <button id="btn decrement">-</button>
-                    <span id="number">0</span>
-                    <button id="btn decrement">+</button>
-                  </div>
-                  <button class="button">Ajouter au Panier</button>
                 </div>
+                <div class="beers-price">
+                  <button id="btn decrement">-</button>
+                  <span id="number">0</span>
+                  <button id="btn decrement">+</button>
+                </div>
+                <button class="button">Ajouter au Panier</button>
               </div>
             </div>
           </div>
