PPRO-mise en page du footer avec les informationsns

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,8 @@
                   <img
                     src="img/personnages/sirene-jaune.png"
                     alt="mini image de la sirene à deux têtes"
+                    class="beers-link"
+                    id="blonde-title"
                   />
                 </a>
               </div>
@@ -242,6 +244,39 @@
         </div>
       </div>
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <img class="title" src="img/bouteilles/logo_BLANC.png" alt="" />
+            <p class="place">
+              <strong>Adresse de la Brasserie:</strong> <br />
+              Licorne Sylvain Megroni, Chemin du Lac 2 CH-1470 Estavayer-Le-Lac
+            </p>
+            <p class="conditions">
+              Politique de confidentialité <br />
+              Conditions générales de vente
+            </p>
+
+            <img
+              class="mini-instagrame"
+              src="img/autre-siteweb/instagram-logo-white-370x370.png"
+              alt="logo instagrame"
+            />
+            <img
+              class="mini-tiktok"
+              src="img/autre-siteweb/tiktok-logo-blanc.png"
+              alt="logo tiktok"
+            />
+
+            <div class="link-web">
+              <p>www.brasserie-licorne.ch</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
