PPRO-changement couleur de la nav et mise en valeur du 33cl

--- a/src/index.html
+++ b/src/index.html
@@ -84,11 +84,11 @@
           <div class="col-8">
             <div class="other-nav">
               <nav>
-                <p>Nos Bières</p>
-                <p>Notre Histoire</p>
-                <p>Shop</p>
-                <p>Point de Vente</p>
-                <p>Contact</p>
+                <p class="nav-beers-colors">Nos Bières</p>
+                <p class="nav-history-colors">Notre Histoire</p>
+                <p class="nav-shop-colors">Shop</p>
+                <p class="nav-point-colors">Point de Vente</p>
+                <p class="nav-contact-colors">Contact</p>
               </nav>
             </div>
           </div>
@@ -132,9 +132,10 @@
               <div class="blonde">
                 <h3 class="blonde-title">Blonde</h3>
                 <div class="text-invisible">
+                  <div class="cl"><strong>en verre de 33 cl</strong></div>
+                  <br />
                   <p class="beers-information">
-                    en verre de <strong>33 cl </strong> <br />
-                    Dans les abysses, seules les sirènes à deux têtes
+                    "Dans les abysses, seules les sirènes à deux têtes
                     <br />savourent les bières blondes, unissant leur essence
                     <br />
                     unique autour de cette boisson pétillante, symbole <br />
@@ -165,6 +166,8 @@
               <div class="brown">
                 <h3 class="brown-title">La Brune</h3>
                 <div class="text-invisible">
+                  <div class="cl"><strong>en verre de 33 cl</strong></div>
+                  <br />
                   <p class="beers-information">
                     “Dans les récits marins, seuls les pirates squelettes <br />
                     s'accordent le privilège des bières rousses. Réunis dans
@@ -198,6 +201,8 @@
               <div class="ipa">
                 <h3 class="ipa-title">La IPA</h3>
                 <div class="text-invisible">
+                  <div class="cl-ipa"><strong>en verre de 33 cl</strong></div>
+                  <br />
                   <p class="beers-information-ipa">
                     “Dans les récits marins, seule la légendaire créature du
                     <br />
