PPRO-ajustement de la newsletter

--- a/src/index.html
+++ b/src/index.html
@@ -227,7 +227,7 @@
                   <span id="number">0</span>
                   <button id="btn decrement">+</button>
                 </div>
-                <button class="button">Ajouter au Panier</button>
+                <button class="button-shop">Ajouter au Panier</button>
               </div>
             </div>
           </div>
@@ -236,15 +236,11 @@
           </div>
           <div class="col-10">
             <div class="newsletter">
-              <input
-                type="text"
-                id="newsletter-firstname"
-                placeholder="Prénom"
-              />
-              <input type="text" id="newsletter-name" placeholder="Nom" />
+              <input type="text" id="newsletter-firstname" placeholder="Nom" />
+              <input type="text" id="newsletter-name" placeholder="Prénom" />
               <input type="text" id="newsletter-email" placeholder="E-mail" />
-              <button class="button">Ajouter au Panier</button>
             </div>
+            <button class="button">Ajouter au Panier</button>
           </div>
         </div>
       </div>
