PPRO-modification de boutton avec de la couleur et des effets de survol

--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
                   <span id="number">0</span>
                   <button id="btn decrement">+</button>
                 </div>
-                <button class="button">Ajouter au Panier</button>
+                <button class="button-blonde">Ajouter au Panier</button>
               </div>
             </div>
 
@@ -193,7 +193,7 @@
                   <span id="number">0</span>
                   <button id="btn decrement">+</button>
                 </div>
-                <button class="button">Ajouter au Panier</button>
+                <button class="button-brown">Ajouter au Panier</button>
               </div>
             </div>
 
@@ -227,7 +227,7 @@
                   <span id="number">0</span>
                   <button id="btn decrement">+</button>
                 </div>
-                <button class="button-shop">Ajouter au Panier</button>
+                <button class="button-ipa">Ajouter au Panier</button>
               </div>
             </div>
           </div>
@@ -240,7 +240,7 @@
               <input type="text" id="newsletter-name" placeholder="Prénom" />
               <input type="text" id="newsletter-email" placeholder="E-mail" />
             </div>
-            <button class="button">Ajouter au Panier</button>
+            <button class="button-shop">S'inscrire !</button>
           </div>
         </div>
       </div>
