PPRO-modifications de le premiere nav

--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,9 @@
                     <option value="nav">DE</option>
                     <option value="nav">EN</option>
                   </select>
-                  <p>Newsletter</p>
-                  <p>Connexion</p>
-                  <p>Panier</p>
+                  <p class="nav-first-newsletter">Newsletter</p>
+                  <p class="nav-first-conexion">Connexion</p>
+                  <p class="nav-first-shop">Panier</p>
                 </nav>
               </div>
             </div>
