PPRO-ajustement des boutton "-" et "+"

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,11 @@
             <div class="beers-blonde">
               <div class="blonde">
                 <h3 class="blonde-title">Blonde</h3>
+                <div class="counter-container">
+                  <button class="btn-decrement" id="decrement">-</button>
+                  <span class="counter" id="counter">0</span>
+                  <button class="btn-decrement" id="increment">+</button>
+                </div>
                 <div class="text-invisible">
                   <div class="cl"><strong>en verre de 33 cl</strong></div>
                   <br />
@@ -153,11 +158,7 @@
                     alt=""
                   />
                 </div>
-                <div class="beers-price">
-                  <button id="btn decrement">-</button>
-                  <span id="number">0</span>
-                  <button id="btn decrement">+</button>
-                </div>
+
                 <button class="button-blonde">Ajouter au Panier</button>
               </div>
             </div>
@@ -165,6 +166,11 @@
             <div class="beers-brown">
               <div class="brown">
                 <h3 class="brown-title">La Brune</h3>
+                <div class="counter-container">
+                  <button class="btn-decrement" id="decrement">-</button>
+                  <span class="counter" id="counter">0</span>
+                  <button class="btn-decrement" id="increment">+</button>
+                </div>
                 <div class="text-invisible">
                   <div class="cl"><strong>en verre de 33 cl</strong></div>
                   <br />
@@ -188,11 +194,7 @@
                     alt=""
                   />
                 </div>
-                <div class="beers-price">
-                  <button id="btn decrement">-</button>
-                  <span id="number">0</span>
-                  <button id="btn decrement">+</button>
-                </div>
+
                 <button class="button-brown">Ajouter au Panier</button>
               </div>
             </div>
@@ -200,6 +202,11 @@
             <div class="beers-ipa">
               <div class="ipa">
                 <h3 class="ipa-title">La IPA</h3>
+                <div class="counter-container">
+                  <button class="btn-decrement" id="decrement">-</button>
+                  <span class="counter" id="counter">0</span>
+                  <button class="btn-decrement" id="increment">+</button>
+                </div>
                 <div class="text-invisible">
                   <div class="cl-ipa"><strong>en verre de 33 cl</strong></div>
                   <br />
@@ -222,11 +229,7 @@
                     alt=""
                   />
                 </div>
-                <div class="beers-price">
-                  <button id="btn decrement">-</button>
-                  <span id="number">0</span>
-                  <button id="btn decrement">+</button>
-                </div>
+
                 <button class="button-ipa">Ajouter au Panier</button>
               </div>
             </div>
