PPRP-ajustement des bouttons "-" et "+" et changement de leur couleur et formes

--- a/src/index.html
+++ b/src/index.html
@@ -131,15 +131,28 @@
             <div class="beers-blonde">
               <div class="blonde">
                 <h3 class="blonde-title">Blonde</h3>
-                <div class="counter-container">
-                  <button class="btn-decrement" id="decrement">-</button>
-                  <span class="counter" id="counter">0</span>
-                  <button class="btn-decrement" id="increment">+</button>
+                <div class="the-price">
+                  <p class="blonde-price">Prix à l'unité</p>
+                  <div class="counter-container">
+                    <button class="btn-decrement" id="decrement">-</button>
+                    <span class="counter" id="counter">0</span>
+                    <button class="btn-decrement" id="increment">+</button>
+                  </div>
+                  <p class="blonde-the-price">4,60</p>
                 </div>
+                <div class="the-price">
+                  <p class="blonde-price">Prix au pack de 4</p>
+                  <div class="counter-container">
+                    <button class="btn-decrement" id="decrement">-</button>
+                    <span class="counter" id="counter">0</span>
+                    <button class="btn-decrement" id="increment">+</button>
+                  </div>
+                  <p class="blonde-the-price">16 CHF</p>
+                </div>
+
                 <div class="text-invisible">
-                  <div class="cl"><strong>en verre de 33 cl</strong></div>
-                  <br />
                   <p class="beers-information">
+                    <strong>en verre de 33 cl</strong> <br />
                     "Dans les abysses, seules les sirènes à deux têtes
                     <br />savourent les bières blondes, unissant leur essence
                     <br />
@@ -158,7 +171,6 @@
                     alt=""
                   />
                 </div>
-
                 <button class="button-blonde">Ajouter au Panier</button>
               </div>
             </div>
@@ -166,7 +178,9 @@
             <div class="beers-brown">
               <div class="brown">
                 <h3 class="brown-title">La Brune</h3>
+                <p class="brown-the-price">4,60</p>
                 <div class="counter-container">
+                  <p class="brown-price">Prix à l'unité</p>
                   <button class="btn-decrement" id="decrement">-</button>
                   <span class="counter" id="counter">0</span>
                   <button class="btn-decrement" id="increment">+</button>
@@ -194,7 +208,6 @@
                     alt=""
                   />
                 </div>
-
                 <button class="button-brown">Ajouter au Panier</button>
               </div>
             </div>
@@ -202,7 +215,9 @@
             <div class="beers-ipa">
               <div class="ipa">
                 <h3 class="ipa-title">La IPA</h3>
+                <p class="ipa-the-price">4,60</p>
                 <div class="counter-container">
+                  <p class="ipa-price">Prix à l'unité</p>
                   <button class="btn-decrement" id="decrement">-</button>
                   <span class="counter" id="counter">0</span>
                   <button class="btn-decrement" id="increment">+</button>
